// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ExpirySelector should render the selector for a carnet 1`] = `
<DocumentFragment>
  <div
    class="govuk-input__wrapper expiry-selector-wrapper"
  >
    <div
      class=""
    >
      <input
        aria-labelledby=""
        class="govuk-input govuk-input--width-3"
        id="test-quantity-id"
        name="testQuantityName"
        type="text"
        value=""
      />
    </div>
    <div
      class=""
    >
      <select
        aria-labelledby=""
        class="govuk-select expiry-selector-units"
        id="test-unit-id"
        name="testUnitName"
      >
        <option
          disabled=""
          selected=""
          value=""
        >
          Select One
        </option>
        <option
          value="hour"
        >
          Hours
        </option>
        <option
          value="day"
        >
          Days
        </option>
        <option
          value="week"
        >
          Weeks
        </option>
        <option
          value="month"
        >
          Months
        </option>
        <option
          value="year"
        >
          Years
        </option>
        <option
          value="no expiry"
        >
          No expiry
        </option>
      </select>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ExpirySelector should render the selector for a non-carnet 1`] = `
<DocumentFragment>
  <div
    class="govuk-input__wrapper expiry-selector-wrapper"
  >
    <div
      class=""
    >
      <input
        aria-labelledby=""
        class="govuk-input govuk-input--width-3"
        id="test-quantity-id"
        name="testQuantityName"
        type="text"
        value=""
      />
    </div>
    <div
      class=""
    >
      <select
        aria-labelledby=""
        class="govuk-select expiry-selector-units"
        id="test-unit-id"
        name="testUnitName"
      >
        <option
          disabled=""
          selected=""
          value=""
        >
          Select One
        </option>
        <option
          value="hour"
        >
          Hours
        </option>
        <option
          value="day"
        >
          Days
        </option>
        <option
          value="week"
        >
          Weeks
        </option>
        <option
          value="month"
        >
          Months
        </option>
        <option
          value="year"
        >
          Years
        </option>
      </select>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ExpirySelector should render the selector for a school ticket 1`] = `
<DocumentFragment>
  <div
    class="govuk-input__wrapper expiry-selector-wrapper"
  >
    <div
      class=""
    >
      <input
        aria-labelledby=""
        class="govuk-input govuk-input--width-3"
        id="test-quantity-id"
        name="testQuantityName"
        type="text"
        value=""
      />
    </div>
    <div
      class=""
    >
      <select
        aria-labelledby=""
        class="govuk-select expiry-selector-units"
        id="test-unit-id"
        name="testUnitName"
      >
        <option
          disabled=""
          selected=""
          value=""
        >
          Select One
        </option>
        <option
          value="hour"
        >
          Hours
        </option>
        <option
          value="day"
        >
          Days
        </option>
        <option
          value="week"
        >
          Weeks
        </option>
        <option
          value="month"
        >
          Months
        </option>
        <option
          value="year"
        >
          Years
        </option>
        <option
          value="term"
        >
          Terms
        </option>
      </select>
    </div>
  </div>
</DocumentFragment>
`;
